2004-01-23  Zoltan Varga  <vargaz@freemail.hu>

	* jit-icalls.c (mono_fconv_ovf_i8): Call truncl before comparison, so
	we don't throw exceptions when converting 1.1 to a long. Fixes #53250.

Fri Jan 23 17:12:08 CET 2004 Paolo Molaro <lupus@ximian.com>

	* driver.c: make --verbose --version emit an error
	if the loaded corlib doesn't match the runtime version.

Mon Jan 19 17:44:50 CET 2004 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.h: export ppc_patch().
	* mini-ppc.c: call convention fixes. Added assert in ppc_patch().
	* tramp-ppc.c: call convention fixes: Linux/PPC support should be
	on par or better than on MacOSX.

2004-01-19  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c tramp-x86.c tramp-sparc.c: Updated after changes to
	mono_lookup_pinvoke_call.

	* mini-x86.c: Under windows, the default pinvoke calling convention is
	stdcall. Fixes #52834.

	* mini.c (optimize_branches): Add an upper bound to the number of
	iterations to prevent infinite loops on strange loops. Fixes #53003.

2004-01-16  Zoltan Varga  <vargaz@freemail.hu>

	* inssel.brg: Add vectors<->one dimensional array checking to CASTCLASS
	and ISINST. Fixes #52093.

	* objects.cs (test_0_vector_array_cast): New tests.
	
2004-01-15  Zoltan Varga  <vargaz@freemail.hu>

	* jit-icalls.c (helper_stelem_ref_check): New jit icall for array type
	checking in Array.Set ().

	* mini.c (method_to_ir): Add array type checking in Array.Set (). Fixes
	#52590.

	* object.cs (test_0_multi_array_cast): New regression test.

Thu Jan 15 16:30:24 CET 2004 Paolo Molaro <lupus@ximian.com>

	* exceptions-ppc.c: fix build on Linux/PPC.

2004-01-14  Zoltan Varga  <vargaz@freemail.hu>

	* tramp-x86.c (x86_magic_trampoline): Disable code patching when
	running under valgrind.
	(x86_magic_trampoline): Fix build bustage.

	* debug-mini.c: Modify the debug info serialize/deserialize code so it handles
	negative values as well. This is needed for the encoding of the line number